--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,15 +5,13 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     tools:context=".activity.MainActivity"
-    android:orientation="horizontal">
+    android:orientation="vertical">
 
 
-    <fragment
-        android:id="@+id/chooseThreadFragment"
-        android:name="org.gitmad.beginners.sessionsix.fragment.ChooseThreadFragment"
+    <ListView
+        android:id="@+id/threadListView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:layout="@layout/fragment_choosethread" />
+        android:layout_height="match_parent"></ListView>
 
 
 
