--- a/app/src/main/res/layout/activity_thread_details.xml
+++ b/app/src/main/res/layout/activity_thread_details.xml
@@ -1,22 +1,22 @@
-<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".activity.ThreadDetailsActivity">
-    <ScrollView
+    android:layout_height="wrap_content"
+    tools:context=".activity.ThreadDetailsActivity"
+    android:orientation="vertical">
+
+    <TextView
+        android:id="@+id/threadNameTextView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scrollbars="vertical">
+        android:layout_height="wrap_content"
+        style="@android:style/TextAppearance.DeviceDefault.WindowTitle"
+        android:text="@string/select_a_thread"
+        android:layout_marginBottom="10dp"/>
 
-        <FrameLayout
-            android:id="@+id/detailsFragmentFrame"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"></FrameLayout>
+    <TextView
+        android:id="@+id/threadDescriptionTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/lorem_ipsum"/>
 
-    </ScrollView>
-</RelativeLayout>
+</android.support.v7.widget.LinearLayoutCompat>
