added spinner to show another ThreadDetailsActivity from a ThreadDetailsActivity. Back navigation goes to last thread, up goes to thread list.

--- a/app/src/main/res/layout/activity_thread_details.xml
+++ b/app/src/main/res/layout/activity_thread_details.xml
@@ -5,6 +5,11 @@
     tools:context=".activity.ThreadDetailsActivity"
     android:orientation="vertical">
 
+    <Spinner
+        android:id="@+id/threadChangeSpinner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"></Spinner>
+
     <TextView
         android:id="@+id/threadNameTextView"
         android:layout_width="match_parent"
