--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,12 +8,7 @@
     android:orientation="vertical">
 
 
-    <ListView
-        android:id="@+id/threadListView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"></ListView>
-
-
+    <!--add a ListView-->
 
 
 </android.support.v7.widget.LinearLayoutCompat>
